--- a/iryna/counter/templates/counter/index.html
+++ b/iryna/counter/templates/counter/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
-<html data-theme="cyberpunk">
+<html lang="en" data-theme="cyberpunk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter App</title>
 
     <!-- DaisyUI +Tailwind CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min css" rel="stylesheet" type="text/css"/>
 
     <!-- HTMX -->
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {},
-        },
-    }
-    </script>
+    <script src="https://unpkg.com/htmx.org@2.0.3"></script>
 </head>
 <body>
     <div class="min-h-screen flex items-center justify-center bg-base-200">
